--- a/templates/uploaded.html
+++ b/templates/uploaded.html
@@ -59,7 +59,7 @@
                 </button>
             </div>
             <div id="switch-container2">
-                <h4>Умная заливка</h4>
+                <h4 id="clever">Умная заливка</h4>
                 <label class="switch">
                     <input type="checkbox" id="checkboxSmartZalivka">
                     <span class="slider"></span>
@@ -121,10 +121,12 @@
         <div>
             <h4>Обводка</h4>
             <div id="switch-container">
+                <h4 id="outline">Обводка текста</h4>
                 <label class="switch">
                     <input type="checkbox" id="checkboxAlightment">
                     <span class="slider"></span>
-                </label> обводка текста
+                </label >
+
             </div>
             <div><input type="color" id="alightmentColorPicker">
                 <span id="alightmentColorValue">#ffffff</span>
